Closed Bug 1068000 Opened 10 years ago Closed 10 years ago

test_iframe_sandbox_general.html fails with Windows content sandbox

Categories

(Core :: Security, defect)

All
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: bobowen, Assigned: bobowen)

References

Details

Attachments

(1 file, 1 obsolete file)

content/html/content/test/test_iframe_sandbox_general.html fails with the Windows content sandbox enabled. Adding the L"\\??\\pipe\\chrome.*" file system rule (the same as the GMP process one) seems to fix this.
I think this is a fairly uncontroversial addition.
Attachment #8490066 - Flags: review?(tabraldes)
Let's try that again with the actual code change included. :-)
Attachment #8490066 - Attachment is obsolete: true
Attachment #8490066 - Flags: review?(tabraldes)
Attachment #8490068 - Flags: review?(tabraldes)
Attachment #8490068 - Flags: review?(tabraldes) → review+
This is part of the set-up of the sandboxed process, so will only run when the Windows content sandbox is enabled. This doesn't happen by default at the moment. Here's a try run showing that this change means that test_iframe_sandbox_general.html works: https://tbpl.mozilla.org/?tree=Try&rev=c0de59972f34
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: