Bug 1068000 - Add client side chrome.* pipe rule for Windows content sandbox. r=tabraldes